--- a/history/v1/B/0/2.ipynb
+++ b/history/v1/B/0/2.ipynb
@@ -36,17 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2                \n",
@@ -58,6 +50,7 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import json\n",
+    "import torch.optim as optim\n",
     "\n",
     "from glob import glob\n",
     "from tqdm import tqdm\n",
@@ -70,6 +63,16 @@
     "\n",
     "# Set PIL to be tolerant of image files that are truncated.\n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if CUDA is available\n",
+    "use_cuda = torch.cuda.is_available()"
    ]
   },
   {
@@ -395,9 +398,6 @@
     "# define VGG16 model\n",
     "VGG16 = models.vgg16(pretrained=True)\n",
     "\n",
-    "# check if CUDA is available\n",
-    "use_cuda = torch.cuda.is_available()\n",
-    "\n",
     "# move model to GPU if CUDA is available\n",
     "if use_cuda:\n",
     "    VGG16 = VGG16.cuda()"
@@ -608,19 +608,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define the CNN architecture\n",
     "class Net(nn.Module):\n",
-    "    ### TODO: choose an architecture, and complete the class\n",
-    "    def __init__(self):\n",
+    "    \n",
+    "    def __init__(self, num_classes=133):\n",
+    "        \n",
     "        super(Net, self).__init__()\n",
+    "        \n",
     "        ## Define layers of a CNN\n",
+    "        \n",
+    "        self.conv1 = nn.Conv2d(3, 16, 3)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, 3)\n",
+    "        self.conv3 = nn.Conv2d(32, 64, 3)\n",
+    "        self.conv4 = nn.Conv2d(64, 128, 3)\n",
+    "        self.conv5 = nn.Conv2d(128, 256, 3)\n",
+    "        self.conv6 = nn.Conv2d(256, 512, 3)\n",
+    "      \n",
+    "        self.maxpool1 = nn.MaxPool2d(3, stride=2)\n",
+    "        \n",
+    "        self.bn1 = nn.BatchNorm2d(16)\n",
+    "        self.bn2 = nn.BatchNorm2d(32)\n",
+    "        self.bn3 = nn.BatchNorm2d(64)\n",
+    "        self.bn4 = nn.BatchNorm2d(128)\n",
+    "        self.bn5 = nn.BatchNorm2d(256)\n",
+    "        self.bn6 = nn.BatchNorm2d(512)\n",
+    "\n",
+    "        self.fc1 = nn.Linear(25088, 1028)\n",
+    "        self.fc2 = nn.Linear(1028, 512)\n",
+    "        self.fc3 = nn.Linear(512, num_classes)\n",
+    "\n",
+    "        self.dropout = nn.Dropout(0.8)\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        ## Define forward behavior\n",
+    "        \n",
+    "        x = self.conv1(x)\n",
+    "        x = self.bn1(x)\n",
+    "        x = F.relu(self.maxpool1(x))\n",
+    "        \n",
+    "        x = self.conv2(x)\n",
+    "        x = self.bn2(x)\n",
+    "        x = F.relu(self.maxpool1(x))\n",
+    "        \n",
+    "        x = self.conv3(x)\n",
+    "        x = self.bn3(x)\n",
+    "        x = F.relu(self.maxpool1(x))\n",
+    "\n",
+    "        x = self.conv4(x)\n",
+    "        x = self.bn4(x)\n",
+    "        x = F.relu(self.maxpool1(x))\n",
+    "\n",
+    "        x = self.conv5(x)\n",
+    "        x = self.bn5(x)\n",
+    "        \n",
+    "        x = self.conv6(x)\n",
+    "        x = self.bn6(x)\n",
+    "\n",
+    "        x = x.view(x.shape[0], -1)\n",
+    "\n",
+    "        x = self.dropout(x)\n",
+    "\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "\n",
+    "        x = self.fc2(x)\n",
+    "        x = F.relu(x)\n",
+    "\n",
+    "        x = self.fc3(x)\n",
+    "        \n",
     "        return x\n",
     "\n",
     "#-#-# You do NOT have to modify the code below this line. #-#-#\n",
@@ -658,17 +716,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.optim as optim\n",
-    "\n",
-    "### TODO: select loss function\n",
-    "criterion_scratch = None\n",
-    "\n",
-    "### TODO: select optimizer\n",
-    "optimizer_scratch = None"
+    "criterion_scratch = nn.CrossEntropyLoss()\n",
+    "optimizer_scratch = optim.SGD(model_scratch.parameters(), lr=0.01, momentum=0.9)"
    ]
   },
   {
@@ -686,11 +739,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the following import is required for training to be robust to truncated images\n",
-    "from PIL import ImageFile\n",
-    "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
-    "\n",
-    "def train(n_epochs, loaders, model, optimizer, criterion, use_cuda, save_path):\n",
+    "def train(n_epochs, model, optimizer, criterion, use_cuda, save_path):\n",
     "    \"\"\"returns trained model\"\"\"\n",
     "    # initialize tracker for minimum validation loss\n",
     "    valid_loss_min = np.Inf \n",
@@ -704,6 +753,8 @@
     "        # train the model #\n",
     "        ###################\n",
     "        model.train()\n",
+    "        \n",
+    "        \n",
     "        for batch_idx, (data, target) in enumerate(loaders['train']):\n",
     "            # move to GPU\n",
     "            if use_cuda:\n",
@@ -737,7 +788,7 @@
     "\n",
     "\n",
     "# train the model\n",
-    "model_scratch = train(100, loaders_scratch, model_scratch, optimizer_scratch, \n",
+    "model_scratch = train(100, model_scratch, optimizer_scratch, \n",
     "                      criterion_scratch, use_cuda, 'model_scratch.pt')\n",
     "\n",
     "# load the model that got the best validation accuracy\n",
