--- a/history/v1/B/1/4.ipynb
+++ b/history/v1/B/1/4.ipynb
@@ -36,17 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2                \n",
@@ -58,17 +50,29 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import json\n",
+    "import torch.optim as optim\n",
     "\n",
     "from glob import glob\n",
     "from tqdm import tqdm\n",
     "from PIL import Image, ImageFile \n",
     "from torchvision import datasets\n",
     "from keras.utils import np_utils\n",
+    "from keras.preprocessing import image\n",
     "                      \n",
     "%matplotlib inline  \n",
     "\n",
     "# Set PIL to be tolerant of image files that are truncated.\n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if CUDA is available\n",
+    "use_cuda = torch.cuda.is_available()"
    ]
   },
   {
@@ -91,22 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 13233 total human images.\n",
-      "There are 8351 total dog images.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load filenames for human and dog images\n",
-    "human_files = np.array(glob(\"lfw/*/*\"))\n",
-    "dog_files = np.array(glob(\"dogImages/*/*/*\"))\n",
+    "human_files = np.array(glob(\"../../lfw/*/*\"))\n",
+    "dog_files = np.array(glob(\"../../dogImages/*/*/*\"))\n",
     "\n",
     "# print number of images in each dataset\n",
     "print('There are %d total human images.' % len(human_files))\n",
@@ -115,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +118,9 @@
     "        \n",
     "        file_name_arr = filename.split('/')\n",
     "        \n",
-    "        return int(file_name_arr[2].split('.')[0])\n",
+    "        return int(file_name_arr[4].split('.')[0])\n",
+    "        \n",
+    "#         return int(file_name_arr[2].split('.')[0])\n",
     "    \n",
     "def get_targets_by_filenames(filesnames):\n",
     "    return [get_target_by_filename(filename) for filename in filesnames]"
@@ -131,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,22 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 133 total dog categories.\n",
-      "There are 8351 total dog images.\n",
-      "\n",
-      "There are 6680 training dog images.\n",
-      "There are 835 validation dog images.\n",
-      "There are 836 test dog images.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def load_dataset(path):\n",
     "    \n",
@@ -173,18 +157,50 @@
     "    return dog_files, dog_targets\n",
     "\n",
     "# load train, test, and validation datasets\n",
-    "train_files, train_targets = load_dataset('dogImages/train')\n",
-    "valid_files, valid_targets = load_dataset('dogImages/valid')\n",
-    "test_files, test_targets = load_dataset('dogImages/test')\n",
+    "train_files, train_targets = load_dataset('../../dogImages/train')\n",
+    "valid_files, valid_targets = load_dataset('../../dogImages/valid')\n",
+    "test_files, test_targets = load_dataset('../../dogImages/test')\n",
     "# load list of dog names\n",
     "# the [20:-1] portion simply removes the filepath and folder number\n",
-    "dog_names = [item[20:-1] for item in sorted(glob(\"dogImages/train/*/\"))]\n",
+    "dog_names = [item[20:-1] for item in sorted(glob(\"../../dogImages/train/*/\"))]\n",
     "# print statistics about the dataset\n",
     "print('There are %d total dog categories.' % len(dog_names))\n",
     "print('There are %s total dog images.\\n' % len(np.hstack([train_files, valid_files, test_files])))\n",
     "print('There are %d training dog images.' % len(train_files))\n",
     "print('There are %d validation dog images.' % len(valid_files))\n",
     "print('There are %d test dog images.'% len(test_files))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define functions for reading in image files as tensors\n",
+    "def path_to_tensor(img_path, target_size=(224, 224)):\n",
+    "    # loads RGB image as PIL.Image.Image type\n",
+    "    # 299 is for xception, 224 for the other models\n",
+    "    img = image.load_img(img_path, target_size=target_size)\n",
+    "    # convert PIL.Image.Image type to 3D tensor with shape (224, 224, 3)\n",
+    "    x = image.img_to_array(img)\n",
+    "    # convert 3D tensor to 4D tensor with shape (1, (target_size,) 3) and return 4D tensor\n",
+    "    return np.expand_dims(x, axis=0)\n",
+    "\n",
+    "def paths_to_tensor(img_paths, target_size = (224, 224)):\n",
+    "    list_of_tensors = [path_to_tensor(img_path, target_size) for img_path in tqdm(img_paths)]\n",
+    "    return torch.tensor(np.vstack(list_of_tensors).astype('float32')/255).permute(0, 3, 1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_tensors = paths_to_tensor(train_files)\n",
+    "valid_tensors = paths_to_tensor(valid_files)\n",
+    "test_tensors = paths_to_tensor(test_files)"
    ]
   },
   {
@@ -351,9 +367,6 @@
    "source": [
     "# define VGG16 model\n",
     "VGG16 = models.vgg16(pretrained=True)\n",
-    "\n",
-    "# check if CUDA is available\n",
-    "use_cuda = torch.cuda.is_available()\n",
     "\n",
     "# move model to GPU if CUDA is available\n",
     "if use_cuda:\n",
@@ -571,13 +584,71 @@
    "source": [
     "# define the CNN architecture\n",
     "class Net(nn.Module):\n",
-    "    ### TODO: choose an architecture, and complete the class\n",
-    "    def __init__(self):\n",
+    "    \n",
+    "    def __init__(self, num_classes=133):\n",
+    "        \n",
     "        super(Net, self).__init__()\n",
+    "        \n",
     "        ## Define layers of a CNN\n",
+    "        \n",
+    "        self.conv1 = nn.Conv2d(3, 16, 3)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, 3)\n",
+    "        self.conv3 = nn.Conv2d(32, 64, 3)\n",
+    "        self.conv4 = nn.Conv2d(64, 128, 3)\n",
+    "        self.conv5 = nn.Conv2d(128, 256, 3)\n",
+    "        self.conv6 = nn.Conv2d(256, 512, 3)\n",
+    "      \n",
+    "        self.maxpool1 = nn.MaxPool2d(3, stride=2)\n",
+    "        \n",
+    "        self.bn1 = nn.BatchNorm2d(16)\n",
+    "        self.bn2 = nn.BatchNorm2d(32)\n",
+    "        self.bn3 = nn.BatchNorm2d(64)\n",
+    "        self.bn4 = nn.BatchNorm2d(128)\n",
+    "        self.bn5 = nn.BatchNorm2d(256)\n",
+    "        self.bn6 = nn.BatchNorm2d(512)\n",
+    "\n",
+    "        self.fc1 = nn.Linear(25088, 1028)\n",
+    "        self.fc2 = nn.Linear(1028, 512)\n",
+    "        self.fc3 = nn.Linear(512, num_classes)\n",
+    "\n",
+    "        self.dropout = nn.Dropout(0.8)\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        ## Define forward behavior\n",
+    "        \n",
+    "        x = self.conv1(x)\n",
+    "        x = self.bn1(x)\n",
+    "        x = F.relu(self.maxpool1(x))\n",
+    "        \n",
+    "        x = self.conv2(x)\n",
+    "        x = self.bn2(x)\n",
+    "        x = F.relu(self.maxpool1(x))\n",
+    "        \n",
+    "        x = self.conv3(x)\n",
+    "        x = self.bn3(x)\n",
+    "        x = F.relu(self.maxpool1(x))\n",
+    "\n",
+    "        x = self.conv4(x)\n",
+    "        x = self.bn4(x)\n",
+    "        x = F.relu(self.maxpool1(x))\n",
+    "\n",
+    "        x = self.conv5(x)\n",
+    "        x = self.bn5(x)\n",
+    "        \n",
+    "        x = self.conv6(x)\n",
+    "        x = self.bn6(x)\n",
+    "\n",
+    "        x = x.view(x.shape[0], -1)\n",
+    "\n",
+    "        x = self.dropout(x)\n",
+    "\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "\n",
+    "        x = self.fc2(x)\n",
+    "        x = F.relu(x)\n",
+    "\n",
+    "        x = self.fc3(x)\n",
+    "        \n",
     "        return x\n",
     "\n",
     "#-#-# You do NOT have to modify the code below this line. #-#-#\n",
@@ -619,13 +690,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.optim as optim\n",
-    "\n",
-    "### TODO: select loss function\n",
-    "criterion_scratch = None\n",
-    "\n",
-    "### TODO: select optimizer\n",
-    "optimizer_scratch = None"
+    "criterion_scratch = nn.CrossEntropyLoss()\n",
+    "optimizer_scratch = optim.SGD(model_scratch.parameters(), lr=0.01, momentum=0.9)"
    ]
   },
   {
@@ -643,16 +709,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the following import is required for training to be robust to truncated images\n",
-    "from PIL import ImageFile\n",
-    "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
-    "\n",
-    "def train(n_epochs, loaders, model, optimizer, criterion, use_cuda, save_path):\n",
+    "def train(\n",
+    "    n_epochs, model, optimizer, \n",
+    "    criterion, use_cuda, save_path,\n",
+    "    train_data, train_target, valid_data, valid_target):\n",
     "    \"\"\"returns trained model\"\"\"\n",
     "    # initialize tracker for minimum validation loss\n",
     "    valid_loss_min = np.Inf \n",
     "    \n",
-    "    for epoch in range(1, n_epochs+1):\n",
+    "    for epoch in tqdm(range(1, n_epochs+1)):\n",
     "        # initialize variables to monitor training and validation loss\n",
     "        train_loss = 0.0\n",
     "        valid_loss = 0.0\n",
@@ -661,29 +726,39 @@
     "        # train the model #\n",
     "        ###################\n",
     "        model.train()\n",
-    "        for batch_idx, (data, target) in enumerate(loaders['train']):\n",
-    "            # move to GPU\n",
-    "            if use_cuda:\n",
-    "                data, target = data.cuda(), target.cuda()\n",
-    "            ## find the loss and update the model parameters accordingly\n",
-    "            ## record the average training loss, using something like\n",
-    "            ## train_loss = train_loss + ((1 / (batch_idx + 1)) * (loss.data - train_loss))\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        # move to GPU\n",
+    "        if use_cuda:\n",
+    "            train_data, train_target = train_data.cuda(), train_target.cuda()\n",
+    "            \n",
+    "        optimizer.zero_grad()\n",
+    "                \n",
+    "        output = model(train_data)\n",
+    "        \n",
+    "        loss = criterion(output, train_target)\n",
+    "            \n",
+    "        loss.backward()\n",
+    "\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        train_loss = train_loss + loss.item()\n",
     "            \n",
     "        ######################    \n",
     "        # validate the model #\n",
     "        ######################\n",
     "        model.eval()\n",
-    "        for batch_idx, (data, target) in enumerate(loaders['valid']):\n",
-    "            # move to GPU\n",
-    "            if use_cuda:\n",
-    "                data, target = data.cuda(), target.cuda()\n",
-    "            ## update the average validation loss\n",
+    "        \n",
+    "        # move to GPU\n",
+    "        if use_cuda:\n",
+    "            valid_data, valid_target = valid_data.cuda(), valid_target.cuda()\n",
     "\n",
     "            \n",
     "        # print training/validation statistics \n",
     "        print('Epoch: {} \\tTraining Loss: {:.6f} \\tValidation Loss: {:.6f}'.format(\n",
     "            epoch, \n",
-    "            train_loss,\n",
+    "            train_loss / len(train_data),\n",
     "            valid_loss\n",
     "            ))\n",
     "        \n",
@@ -692,13 +767,13 @@
     "    # return trained model\n",
     "    return model\n",
     "\n",
-    "\n",
     "# train the model\n",
-    "model_scratch = train(100, loaders_scratch, model_scratch, optimizer_scratch, \n",
-    "                      criterion_scratch, use_cuda, 'model_scratch.pt')\n",
+    "model_scratch = train(100, model_scratch, optimizer_scratch, \n",
+    "                      criterion_scratch, use_cuda, 'model_scratch.pt',\n",
+    "                     train_tensors, train_targets, valid_tensors, valid_targets)\n",
     "\n",
     "# load the model that got the best validation accuracy\n",
-    "model_scratch.load_state_dict(torch.load('model_scratch.pt'))"
+    "# model_scratch.load_state_dict(torch.load('model_scratch.pt'))"
    ]
   },
   {
